tests/spec/emit/snapshots/map_alias_with_comparable_bound_in_interface_method.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Table<T: Comparable> = Map<T, int>
  
  interface Uses<T: Comparable> {
    fn id(self, table: Table<T>) -> Table<T>
  }
  
  fn main() {
    let _ = 1
  }
---
package main

type Table[T comparable] = map[T]int

type Uses[T comparable] interface {
	id(Table[T]) Table[T]
}

func main() {}
