tests/spec/emit/snapshots/map_alias_with_comparable_bound_in_struct_field.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Table<T: Comparable> = Map<T, int>
  
  struct Box<T: Comparable> {
    table: Table<T>,
  }
  
  fn main() {
    let b = Box { table: Map.new<string, int>() }
    let _ = b
  }
---
package main

type Table[T comparable] = map[T]int

type Box[T comparable] struct {
	table Table[T]
}

func main() {
	b := Box[string]{table: make(map[string]int)}
	_ = b
}
