tests/spec/emit/snapshots/map_alone_keeps_the_option.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn main() {
    let shown = os.LookupEnv("HOME").map(|h| "home=" + h)
    fmt.Println(shown.is_some())
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func main() {
	option := lisette.OptionFromCommaOk[string](os.LookupEnv("HOME"))
	shown := lisette.OptionMap(option, func(h string) string {
		return "home=" + h
	})
	fmt.Println(shown.IsSome())
}
