tests/spec/emit/snapshots/map_delete.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(m: mut Map<string, int>, key: string) {
    m.delete(key)
  }
---
package main

func test(m map[string]int, key string) {
	delete(m, key)
}
