tests/spec/emit/snapshots/map_entry_slice_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box {
    items: Slice<int>,
  }
  
  fn main() {
    let mut m = Map.new<string, Box>()
    m["a"] = Box { items: [] }
    let mut entry = m["a"]
    entry.items = entry.items.append(1)
    m["a"] = entry
  }
---
package main

type Box struct {
	items []int
}

func main() {
	m := make(map[string]Box)
	m["a"] = Box{}
	entry := m["a"]
	entry.items = append(entry.items, 1)
	m["a"] = entry
}
