tests/spec/emit/snapshots/map_entry_slice_append_deref_map.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box {
    items: Slice<int>,
  }
  
  fn main() {
    let mut m = Map.new<string, Box>()
    m["a"] = Box { items: [] }
    let mut r = &m
    let mut entry = Box { items: r.*["a"].items.clone() }
    entry.items = entry.items.append(1)
    r.*["a"] = entry
  }
---
package main

import "slices"

type Box struct {
	items []int
}

func main() {
	m := make(map[string]Box)
	m["a"] = Box{items: []int{}}
	r := &m
	entry := Box{items: slices.Clone((*r)["a"].items)}
	entry.items = append(entry.items, 1)
	(*r)["a"] = entry
}
