tests/spec/emit/snapshots/map_entry_slice_append_map_expr_evaluated_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box {
    items: Slice<int>,
  }
  
  fn get_map(m: mut Map<string, Box>) -> mut Map<string, Box> {
    m
  }
  
  fn main() {
    let mut m = Map.new<string, Box>()
    m["a"] = Box { items: [] }
    let mut map = get_map(m)
    let mut entry = Box { items: map["a"].items.clone() }
    entry.items = entry.items.append(1)
    map["a"] = entry
  }
---
package main

import "slices"

type Box struct {
	items []int
}

func getMap(m map[string]Box) map[string]Box {
	return m
}

func main() {
	m := make(map[string]Box)
	m["a"] = Box{items: []int{}}
	map_ := getMap(m)
	entry := Box{items: slices.Clone(map_["a"].items)}
	entry.items = append(entry.items, 1)
	map_["a"] = entry
}
