tests/spec/emit/snapshots/map_entry_slice_append_newtype.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(Slice<int>)
  
  fn main() {
    let mut m = Map.new<string, Wrap>()
    m["a"] = Wrap([])
    m["a"] = Wrap(m["a"].0.append(1))
  }
---
package main

type Wrap []int

func main() {
	m := make(map[string]Wrap)
	m["a"] = Wrap([]int{})
	base := m
	recv := ([]int)(m["a"])
	base["a"] = Wrap(append(recv[:len(recv):len(recv)], 1))
}
